Fix padding, ul spacing

--- a/css/style.css
+++ b/css/style.css
@@ -142,8 +142,7 @@ body {
 }
 
 .card__details {
-    padding: 2rem;
-
+        padding: 2rem 0;
 }
 
 .card__details ul {
@@ -154,6 +153,11 @@ body {
 .card__details ul li {
   text-align: center;
   padding: 1rem;
+  color: hsl(233, 13%, 49%);
+}
+
+.card--purple .card__details ul li {
+  color: white;
 }
 
 .card__details ul li {
@@ -167,16 +171,18 @@ body {
 }
 
 .card {
-  width: 25rem;
-
   display: flex;
   flex-direction: column;
   align-items: stretch;
   background-color: white;
 
 
-  padding: 2rem;
+  padding: 3rem;
   border-radius: 5px;
+
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: hsl(232, 13%, 33%);
 
   box-shadow: 0 1px 2px rgba(0,0,0, .25);
 }
